kubernetes/manifests/assets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  namespace: retail-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      containers:
      - name: assets
        image: public.ecr.aws/aws-containers/retail-store-sample-assets:0.7.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 64m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: retail-store
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: assets
