kubernetes/manifests/carts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: retail-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      containers:
      - name: carts
        image: public.ecr.aws/aws-containers/retail-store-sample-cart:0.7.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 128m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: retail-store
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: carts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-dynamodb
  namespace: retail-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts-dynamodb
  template:
    metadata:
      labels:
        app: carts-dynamodb
    spec:
      containers:
      - name: dynamodb
        image: amazon/dynamodb-local:2.0.0
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 128m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: carts-dynamodb
  namespace: retail-store
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: carts-dynamodb
