kubernetes/manifests/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: public.ecr.aws/aws-containers/retail-store-sample-ui:0.7.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 128m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-store
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: ui
